# chorus

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  go.mod  go.sum  install.sh
.github/workflows/: release.yml
cmd/chorus/: devices.go  logging.go  main.go  manualsync.go  menu.go  play.go  sync.go
cmd/chrometooth/: devices.go  main.go  play.go
internal/audio/: format.go  format_test.go
internal/calibrate/: chirp.go  correlate.go  correlate_test.go  fft.go  measure.go
internal/capture/: audiotee.go
internal/discover/: discover.go  discover_test.go
internal/output/: airplay.go  bt.go  cast.go  output.go  output_test.go
internal/pipeline/: pipeline.go
internal/raop/: raop.go
native/airplayrelay/: Cargo.toml  SAMSUNG_FINDINGS.md
native/airplayrelay/src/: main.rs
native/chorusaudio/: Package.swift
native/chorusaudio/Sources/chorusaudio/: main.swift
native/chrometoothaudio/: Package.swift
native/chrometoothaudio/Sources/chrometoothaudio/: main.swift
scripts/: build_deps.sh  build_deps_airplay.sh  package.sh
