[package]
name = "airplayrelay"
version = "0.1.0"
edition = "2021"
description = "chorus AirPlay 2 sidecar: list receivers and stream s16le PCM from stdin"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "airplayrelay"
path = "src/main.rs"

[dependencies]
# Pure-Rust AirPlay 2 stack (discovery, HomeKit pairing, live PCM streaming).
# Vendored at upstream rev 527884f (early-stage v0.1) under third_party/airplay2-rs
# with a LOCAL PATCH: connect_internal sends RTSP OPTIONS *after* authentication so
# strict receivers (Samsung TVs, HomePods) that 403 a cleartext OPTIONS accept it
# over the encrypted channel. See third_party/airplay2-rs/src/connection/manager.rs.
airplay2 = { path = "../../third_party/airplay2-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# A relay should start fast and stay small; opt for size without losing speed.
opt-level = 2
